tests/shouldFail/j067a.c
typedef int fun();
const fun f;

int main(void){

}
